[gd_scene load_steps=13 format=2]

[ext_resource path="res://Fonts/DynFont_MessageBoxName.tres" type="DynamicFont" id=1]
[ext_resource path="res://Fonts/DynFont_MessageBoxBody.tres" type="DynamicFont" id=2]
[ext_resource path="res://addons/antialiased_line2d/antialiased_polygon2d.gd" type="Script" id=3]
[ext_resource path="res://Textures/UI/tex_panel_9slice_03.png" type="Texture" id=4]
[ext_resource path="res://Scripts/UI/SpeechBubble.gd" type="Script" id=5]
[ext_resource path="res://Fonts/DynFont_MessageBoxBody_I.tres" type="DynamicFont" id=6]
[ext_resource path="res://Fonts/DynFont_MessageBoxBody_B.tres" type="DynamicFont" id=7]
[ext_resource path="res://Fonts/DynFont_MessageBoxBody_BI.tres" type="DynamicFont" id=8]
[ext_resource path="res://Textures/UI/tex_ui_speechBubble_continueIcon.png" type="Texture" id=9]
[ext_resource path="res://Sound Effects/Sound_Dialogue_Serac_1.ogg" type="AudioStream" id=10]
[ext_resource path="res://addons/RandomAudioNodePlayer/RandomAudioNodePlayer.gd" type="Script" id=11]

[sub_resource type="Animation" id=1]
resource_name = "Sequence_CloseSpeechBubble"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.01, 0.01 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[node name="Message Box" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.0
margin_right = -1.0
rect_min_size = Vector2( 100, 100 )
rect_pivot_offset = Vector2( 382, 432 )
script = ExtResource( 5 )
text_name = "Character Name"
text_body = [ "character dialogue", "fdgsdgdflasndf;ljansd;gfjnskdjnw efkwejr243jkdkf sdkfm ;esnrfrl n3w;34r25435 t0s9gsflwm4 tl;kmdgflaknsdmf;laksafs d547y rtw e54y 45yu47w567ew564 4b" ]

[node name="Box" type="Control" parent="."]
anchor_left = 0.009
anchor_top = 0.016
anchor_right = 0.991
anchor_bottom = 0.963
margin_left = 0.115
margin_top = 0.0879998
margin_right = -0.115051
margin_bottom = -0.0160217

[node name="NinePatchRect" type="NinePatchRect" parent="Box"]
modulate = Color( 0.282353, 0.658824, 0.909804, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -5.0
texture = ExtResource( 4 )
patch_margin_left = 36
patch_margin_top = 35
patch_margin_right = 36
patch_margin_bottom = 38

[node name="NinePatchRect2" type="NinePatchRect" parent="Box"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.0
margin_top = 3.0
margin_right = -14.0
margin_bottom = -11.0
texture = ExtResource( 4 )
patch_margin_left = 36
patch_margin_top = 35
patch_margin_right = 36
patch_margin_bottom = 38

[node name="Tail" type="Control" parent="Box"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 41.0
margin_right = -45.0

[node name="TailCenter" type="Control" parent="Box/Tail"]
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="AntialiasedPolygon2D" type="Polygon2D" parent="Box/Tail/TailCenter"]
scale = Vector2( 0.5, 0.5 )
color = Color( 0.282353, 0.658824, 0.909804, 1 )
polygon = PoolVector2Array( -21.233, -2, -21.233, 13, -40.233, 29, 1, 29, 27.767, -2 )
script = ExtResource( 3 )
stroke_color = Color( 0.282353, 0.658824, 0.909804, 1 )
stroke_width = 4.0
stroke_sharp_limit = 20.0

[node name="AntialiasedPolygon2D2" type="Polygon2D" parent="Box/Tail/TailCenter"]
scale = Vector2( 0.5, 0.5 )
polygon = PoolVector2Array( 20, -12, -2, 22, -22, 22, -13.7219, 14.0587, -14, -12, 0, -28 )
script = ExtResource( 3 )
stroke_color = Color( 1, 1, 1, 1 )
stroke_width = 4.0
stroke_sharp_limit = 10.0

[node name="ContinueIcon" type="Control" parent="Box"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Sprite" type="Sprite" parent="Box/ContinueIcon"]
modulate = Color( 0.256027, 0.295427, 0.464844, 1 )
position = Vector2( -35, -25 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 9 )
hframes = 2

[node name="Text" type="VSplitContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 26.0
margin_top = 24.0
margin_right = -36.0
margin_bottom = -34.0
split_offset = 36
dragger_visibility = 2

[node name="Name" type="RichTextLabel" parent="Text"]
margin_right = 702.0
margin_bottom = 36.0
rect_clip_content = false
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.282353, 0.658824, 0.909804, 1 )
custom_fonts/normal_font = ExtResource( 1 )
bbcode_text = "Character Name"
text = "Character Name"
scroll_active = false
deselect_on_focus_loss_enabled = false

[node name="Body" type="RichTextLabel" parent="Text"]
margin_top = 36.0
margin_right = 702.0
margin_bottom = 374.0
rect_clip_content = false
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.282353, 0.658824, 0.909804, 1 )
custom_fonts/mono_font = ExtResource( 2 )
custom_fonts/bold_italics_font = ExtResource( 8 )
custom_fonts/italics_font = ExtResource( 6 )
custom_fonts/bold_font = ExtResource( 7 )
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "character dialogue"
visible_characters = 0
percent_visible = 0.0
text = "character dialogue"
fit_content_height = true
scroll_active = false
deselect_on_focus_loss_enabled = false
custom_effects = [ null ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Sequence_CloseSpeechBubble = SubResource( 1 )

[node name="RandomAudioNodePlayer" type="Node" parent="."]
pause_mode = 2
script = ExtResource( 11 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="RandomAudioNodePlayer"]
pause_mode = 2
stream = ExtResource( 10 )
volume_db = -20.0
bus = "SoundEffects"

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="RandomAudioNodePlayer"]
pause_mode = 2
stream = ExtResource( 10 )
volume_db = -20.0
bus = "SoundEffects"

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="RandomAudioNodePlayer"]
pause_mode = 2
stream = ExtResource( 10 )
volume_db = -20.0
bus = "SoundEffects"
